# dbx-genie-app

./: .gitignore  CLAUDE.md  README.md  app.yaml  databricks.yml  deploy.sh  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  DECISIONS.md  TASKS.md
resources/: create_space_job.yml  genieapp.app.yml  setup_job.yml
scripts/: 01_generate_data.ipynb  02_create_tables.ipynb  03_setup_genie.ipynb  run_pipeline.py  test_faker.py  test_persistence.py
scripts/pipeline/: 01_design_and_generate.ipynb  02_create_tables.ipynb  03_create_space.ipynb  04_create_dashboard.ipynb
src/genieapp/: _metadata.py  _metadata.pyi  _version.py
src/genieapp/__dist__/: index.html
src/genieapp/__dist__/assets/: index-B2EX8rWZ.js  index-BQ0mBdIs.js  index-B_J39Nkj.js  index-BxEehfx-.js  index-C55c2n66.css  index-CddKFfkH.css  index-Cn5YQFQn.css  index-CqzV1zGF.js  index-D9-QDH8r.js  index-DAcphpY2.css  index-DEM8JEyC.css  index-DLxO7t1a.js  index-DxRteVUO.css  index-IQg6Vko6.js  index-LQMhQ9Ht.css  index-QdPuROgk.css  index-ZlPIxKVa.js  index-jJNzdUbN.js  index-q_WGCXco.js  index-vrjwyfNK.css  index-xLsm5m7Z.css
src/genieapp/backend/: app.py  app_config.py  chart_suggest.py  db.py  genie_client.py  models.py  router.py
src/genieapp/backend/core/: __init__.py  _base.py  _config.py  _defaults.py  _factory.py  _headers.py  _static.py  dependencies.py
src/genieapp/backend/pipeline/: __init__.py  dashboard_designer.py  data_generator.py  run.py  schema_designer.py  space_creator.py  (+1 more)
src/genieapp/ui/: index.html  main.tsx
(+49 files in other folders)
